Click to script: Ensure withheld web requests correctly update wants-to-run badge UI.

Currently we might not correctly update the wants-to-run badge UI for an
extension if it has a withheld web request. Fix this by notifying the extension
action API to update the badge UI, whenever the first withheld web request for
an extension is registered on a web contents.

BUG=891549

Change-Id: Ibd5c639a878857bd96f2d7cc8a967b2750dabf57
Reviewed-on: https://chromium-review.googlesource.com/c/1258321
Commit-Queue: Karan Bhatia <karandeepb@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Reviewed-by: Karan Bhatia <karandeepb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596448}