chrome/browser/extensions/extension_action_runner.cc
@@ -6,6 +6,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "chrome/browser/extensions/extension_action_runner.h"
 
 #include <memory>
+#include <tuple>
 
 #include "base/auto_reset.h"
 #include "base/bind.h"
@@ -170,7 +171,12 @@ void ExtensionActionRunner::OnActiveTabPermissionGranted(
 }
 
 void ExtensionActionRunner::OnWebRequestBlocked(const Extension* extension) {
-  web_request_blocked_.insert(extension->id());
+  bool inserted = false;
+  std::tie(std::ignore, inserted) =
+      web_request_blocked_.insert(extension->id());
+  if (inserted)
+    NotifyChange(extension);
+
   if (test_observer_)
     test_observer_->OnBlockedActionAdded();
 }
